objects/BMCServiceDesk__SS_Tile_Entitlement__c.object
<CustomObject>
    <description>Stores required information about the Self Service Tile entitlement.</description>
    <fields>
        <fullName>BMCServiceDesk__All_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the tile is assigned to all the accounts then the value of this field will be set to True.</description>
        <label>All Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Customsetting_tile_ID__c</fullName>
        <description>Stores the ID of the tile record saved in the custom settings.</description>
        <label>Custom setting tile ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Profiles_Permissionsets__c</fullName>
        <defaultValue>&apos;All&apos;</defaultValue>
        <description>This stores the comma-separated IDs of the Profiles or Permission sets.</description>
        <label>Profiles or Permission sets</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>SS Tile Entitlement</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>SSTile Entitlement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSTile Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>